[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytraverser"
version = "0.1.5"
description = "A terminal file tree traverser."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

dependencies = [
  "mdsthin>=1.6.1",
  "numpy",
  "rich",
  "textual>=6.1.0",
]

authors = [
  { name = "Josh Stillerman", email = "jas@mit.edu" }
]

[project.scripts]
pytraverser = "pytraverser:main"

[project.urls]
homepage = "https://github.com/MIT-PSFC/pytraverser"
repository = "https://github.com/MIT-PSFC/pytraverser"

[tool.setuptools]
py-modules = ["pytraverser"]
